kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
      imagePullSecrets:
        - name: ecr-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APPLICATION_NAME}
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
spec:
  rules:
    - host: api-key-manager-api.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 3000
